Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5364

Number of fragments reported in the web-ui is incorrect

    XMLWordPrintableJSON

Details

    • ghx-label-1

    Description

      Number of fragments perf backend reported in the web-ui is incorrect.
      It appears to be displaying the number of queries instead, during that snapshot there was +1K fragments running on the cluster.

      Query Locations
      Location	Number of Fragments
      s-11.foo.com:22000	15
      s-12.foo.com:22000	15
      s-10.foo.com:22000	15
      s-14.foo.com:22000	15
      s-16.foo.com:22000	15
      s-13.foo.com:22000	15
      s-09.foo.com:22000	15
      

      Attachments

        Activity

          People

            henryr Henry Robinson
            mmokhtar Mostafa Mokhtar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: