IMPALA-5364: Correct title of query locations table

Previously claimed to be #fragments, but this was inaccurate - it's the
number of queries with fragments on that host.

We should have per-backend reporting on the number of fragment instances
in the future, but for now let's correct the mistaken label.

Change-Id: I2fddd41500ada10eb1c12d92afcb96a82009857b
Reviewed-on: http://gerrit.cloudera.org:8080/6988
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Impala Public Jenkins